# IntraNet

./: .gitignore  pyproject.toml  requeriments.txt
src/: func_server.py  main.py  test_admin.py
storage/: Alumns.csv  Alumns_to_Parents.csv  App_DB.xlsx  Classes.csv  Parents.csv  Tutors.csv  credentials.json  credentials_csv.txt
